cabal-version:      2.2
name:               txg
version:            1.0.0
description:        Chainweb transaction generator.
homepage:           https://github.com/kadena-io/txg
author:             Kadena LLC
maintainer:         colin@kadena.io
copyright:          2020 Kadena LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

executable txg
  default-language: Haskell2010
  main-is:          TXG.hs
  hs-source-dirs:   exec
  ghc-options:
    -Wall -Wcompat -Wpartial-fields -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Widentities -funclutter-valid-hole-fits
    -threaded -rtsopts -with-rtsopts=-N

  other-modules:
    TXG.Simulate.Contracts.CoinContract
    TXG.Simulate.Contracts.Common
    TXG.Simulate.Contracts.HelloWorld
    TXG.Simulate.Contracts.SimplePayments
    TXG.Simulate.Utils
    TXG.Types

  build-depends:
    , aeson                 ^>=1.4
    , async                 ^>=2.2
    , attoparsec            ^>=0.13
    , base                  >=4.7  && <5
    , base-prelude          ^>=1.3
    , base16-bytestring     ^>=0.1
    , bytestring
    , chainweb              ^>=1.6
    , configuration-tools   ^>=0.4
    , containers
    , data-default          ^>=0.7
    , Decimal               ^>=0.5
    , exceptions            ^>=0.10
    , fake                  ^>=0.1
    , file-embed            ^>=0.0
    , generic-lens          ^>=1.1
    , http-client           ^>=0.6
    , http-client-tls       ^>=0.3
    , lens                  ^>=4.17
    , mtl                   ^>=2.2
    , mwc-random            ^>=0.14
    , neat-interpolation    ^>=0.3
    , nonempty-containers   ^>=0.3
    , pact                  ^>=3.5
    , pretty-simple         ^>=2.2
    , primitive             ^>=0.6
    , random                ^>=1.1
    , servant               ^>=0.16
    , servant-client        ^>=0.16
    , stm
    , text
    , time                  ^>=1.8
    , unordered-containers  ^>=0.2
    , yaml                  ^>=0.11
    , yet-another-logger    ^>=0.3
