cabal-version:      2.2
name:               txg
version:            1.0.0
description:        Chainweb transaction generator.
homepage:           https://github.com/kadena-io/txg
author:             Kadena LLC
maintainer:         colin@kadena.io
copyright:          2020 Kadena LLC
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.org
  ChangeLog.md

common commons
  default-language:   Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Wpartial-fields
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Widentities
    -funclutter-valid-hole-fits

  build-depends:
    , aeson
    , attoparsec            >=0.13
    , base                  >=4.11  && <5
    , base16-bytestring
    , base64                >=0.4
    , bytestring
    , configuration-tools
    , connection            >=0.3
    , containers
    , Decimal               >=0.5
    , exceptions            >=0.10
    , fake                  >=0.1
    , hostaddress
    , http-client           >=0.6
    , http-client-tls       >=0.3
    , http-types            >=0.12
    , lens                  >=4.17
    , mtl                   >=2.2
    , optparse-applicative
    , pact                  >=3.5
    , random                >=1.1
    , text
    , time                  >=1.8
    , unordered-containers  >=0.2
    , yaml                  >=0.11

library
  import:          commons
  hs-source-dirs:  lib
  exposed-modules:
    TXG.Repl
    TXG.Simulate.Contracts.CoinContract
    TXG.Simulate.Contracts.Common
    TXG.Simulate.Contracts.HelloWorld
    TXG.Simulate.Contracts.SimplePayments
    TXG.Simulate.Utils
    TXG.Utils

  other-modules:   TXG.ReplInternals
  build-depends:
    , data-default        >=0.7
    , extra               >=1.6
    , file-embed          >=0.0
    , neat-interpolation  >=0.3
    , random-bytestring   >=0.1
    , random-strings      >=0.1
    , string-conv         >=0.1

executable txg
  import:         commons
  main-is:        TXG.hs
  hs-source-dirs: exec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  other-modules:  TXG.Types
  build-depends:
    , async                >=2.2
    , generic-lens         >=1.1
    , lens-aeson          >= 1.1
    , mwc-random           >=0.14
    , nonempty-containers  >=0.3
    , parsec
    , pretty-simple        >=2.2 && < 4.0
    , primitive            >=0.6
    , retry
    , split
    , string-conv         >=0.1
    , stm
    , txg
    , yet-another-logger   >=0.3

executable mempool-p2p-tester
  import: commons
  main-is: MPT.hs
  hs-source-dirs: exec
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    TXG.Types
    MPT.Types
  build-depends:
    , async               >=2.2
    , sqlite-simple       >= 0.4.17.0
    , generic-lens        >= 1.1
    , lens-aeson          >= 1.1
    , mwc-random          >=0.14
    , nonempty-containers >=0.3
    , pretty-simple       >=2.2 && < 4.0
    , primitive           >=0.6
    , retry
    , stm
    , txg
    , yet-another-logger  >= 0.3
